@@ -1,0 +1,38 @@
+{% extends "frontpage/base_en.html" %}
+
+{% block title %}blog@{{ mainpage.title }} | {{ mainpage.subtitle }}{% endblock %}
+
+{% block body %}
+	{% include "blog/sidebar_en.html" %}
+	<div id="blog_container">
+		<a href="javascript: history.back()" title="click here to return back to the previous page.." class="gray_link">&laquo; back</a>
+		<br><br>
+		<div class="entry">
+			<div class="entry_header">
+				<div class="entry_date">
+					<div class="entry_date_day">{{ entry.datetime|date:"d" }}</div>
+					<div class="entry_date_month">{{ entry.datetime|date:"M" }}</div>
+					<div class="entry_date_year">{{ entry.datetime|date:"Y" }}</div>
+					<div class="entry_date_time">Saat: {{ entry.datetime|date:"H:i" }}</div>
+				</div>
+				<div class="entry_header_body">
+					<div class="entry_title">
+						{{ entry.title }}
+					</div>
+					<div class="entry_tags">
+						<strong>tags:</strong>
+						{% for tag in entry.tags.all %}
+						<a href="{% url english_entries_with_tag tag %}" title="click here to read entries that are tagged with {{ tag }}.." class="gray_link">{{ tag }}</a>
+						{% endfor %}
+					</div>
+				</div>
+			</div>
+			<div class="entry_body">
+				<p align="justify">
+					{{ entry.content }}
+				</p>
+			</div>
+			{% include "blog/comments_en.html" %}
+		</div>
+	</div>
+{% endblock %}
