@@ -19,18 +19,18 @@
 					<div class="entry_date_day">{{ entry.datetime|date:"d" }}</div>
 					<div class="entry_date_month">{{ entry.datetime|date:"M" }}</div>
 					<div class="entry_date_year">{{ entry.datetime|date:"Y" }}</div>
-					<div class="entry_date_time">Saat: {{ entry.datetime|date:"H:i" }}</div>
+					<div class="entry_date_time">At: {{ entry.datetime|date:"H:i" }}</div>
 				</div>
 				<div class="entry_header_body">
 					<div class="entry_title">
-						<a href="{% url blog_entry entry.datetime.year,entry.datetime.month,entry.datetime.day,entry.slug %}" title="click here to read the rest of the entry.." class="link">
+						<a href="{% url english_blog_entry entry.datetime.year,entry.datetime.month,entry.datetime.day,entry.slug %}" title="click here to read the rest of the entry.." class="link">
 							{{ entry.title }}
 						</a>
 					</div>
 					<div class="entry_tags">
-						<strong>etiketler:</strong>
+						<strong>tags:</strong>
 						{% for tag in entry.tags.all %}
-						<a href="{% url entries_with_tag tag %}" title="click here to read entries that are tagged with {{ tag }}.." class="gray_link">{{ tag }}</a>
+						<a href="{% url english_entries_with_tag tag %}" title="click here to read entries that are tagged with {{ tag }}.." class="gray_link">{{ tag }}</a>
 						{% endfor %}
 					</div>
 				</div>
@@ -40,7 +40,7 @@
 					{{ entry.content|cut_text_by:1000 }}
 					{% if entry.content|is_text_larger_than:1000 %}
 						<br><br>
-						<a href="{% url blog_entry entry.datetime.year,entry.datetime.month,entry.datetime.day,entry.slug %}" title="click here to read the rest of the entry.." class="link">
+						<a href="{% url english_blog_entry entry.datetime.year,entry.datetime.month,entry.datetime.day,entry.slug %}" title="click here to read the rest of the entry.." class="link">
 							click here to read the rest of the entry..
 						</a>
 						<br>
@@ -52,11 +52,11 @@
 				<div class="entry_footer_middle">
 					<div class="entry_footer_text">
 						{% ifequal entry.published_comments.count 0 %}
-							<a href="{% url blog_entry entry.datetime.year,entry.datetime.month,entry.datetime.day,entry.slug %}#comments" title="click here to write the first comment.." class="white_link">
+							<a href="{% url english_blog_entry entry.datetime.year,entry.datetime.month,entry.datetime.day,entry.slug %}#comments" title="click here to write the first comment.." class="white_link">
 								No Comments
 							</a>
 						{% else %}
-							<a href="{% url blog_entry entry.datetime.year,entry.datetime.month,entry.datetime.day,entry.slug %}#comments" title="click here to comment on this entry.." class="white_link">
+							<a href="{% url english_blog_entry entry.datetime.year,entry.datetime.month,entry.datetime.day,entry.slug %}#comments" title="click here to comment on this entry.." class="white_link">
 								{% ifequal entry.published_comments.count 1 %}
 									{{ entry.published_comments.count }} Comment
 								{% else %}
